--- a/fsm-protocols.cabal
+++ b/fsm-protocols.cabal
@@ -52,8 +52,10 @@ extra-source-files:  CHANGELOG.md
 
 library
   -- Modules exported by the library.
-  -- exposed-modules:
-
+  exposed-modules:
+      Data.Grammar.FSM.Reference
+    --Data.Grammar.FSM.Parse
+    -- Data.Grammar.FSM.Token
   -- Modules included in this library but not exported.
   -- other-modules:
 
@@ -61,7 +63,11 @@ library
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:       base ^>=4.12.0.0
+  build-depends:
+    base ^>=4.12.0.0
+    ,megaparsec ^>=7.0.5
+
+  build-tool-depends: alex:alex, happy:happy
 
   -- Directories containing source files.
   hs-source-dirs:      src
